[project]
name = "fs2-real"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "g2p-en>=2.1.0",
    "inflect>=7.5.0",
    "librosa>=0.11.0",
    "matplotlib>=3.9.4",
    "numba>=0.60.0",
    "numpy>=2.0.2",
    "pypinyin>=0.55.0",
    "pyworld>=0.3.5",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "soundfile>=0.13.1",
    "tensorboard>=2.20.0",
    "tgt>=1.5",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "unidecode>=1.4.0",
]
